--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,7 +1,7 @@
 .nav-container {
   background-color: #304766;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   font-family: 'Roboto';
 }
